crates/alien-cli/src/commands/snapshots/alien_cli__commands__whoami__tests__dev_whoami_response.snap
---
source: crates/alien-cli/src/commands/whoami.rs
expression: render_dev_whoami(&response)
---
Signed in as sa_01HXYZ
Account Type serviceAccount
Role workspace.member
Scope project (proj_9f3a)
Workspace ID ws_4b21
Workspace Name Acme Corp
