crates/alien-cli/src/commands/snapshots/alien_cli__commands__whoami__tests__service_account_deployment_group_scope.snap
---
source: crates/alien-cli/src/commands/whoami.rs
expression: render_service_account_subject(&subject)
---
Signed in as service account
Account ID sa_01HXYZ
Account Type serviceAccount
Role deployment-group.deployer
Scope deployment-group (dg_3c4d, project proj_9f3a)
Workspace ID ws_4b21
Workspace Name Acme Corp
