crates/alien-cli/src/commands/snapshots/alien_cli__commands__whoami__tests__user_subject_with_workspace_name.snap
---
source: crates/alien-cli/src/commands/whoami.rs
expression: "render_user_subject(&user_subject(Some(\"Acme Corp\")))"
---
Signed in as user@example.com
Account ID usr_7k2m
Account Type user
Role workspace.admin
Workspace ID ws_4b21
Workspace Name Acme Corp
