crates/alien-cli/src/commands/snapshots/alien_cli__commands__whoami__tests__user_subject_without_workspace_name.snap
---
source: crates/alien-cli/src/commands/whoami.rs
expression: render_user_subject(&user_subject(None))
---
Signed in as user@example.com
Account ID usr_7k2m
Account Type user
Role workspace.admin
Workspace ID ws_4b21
